--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
       </a>
       <div class="hamburger-menu" id="hamburger-menu">&#9776;</div>
       <ul class="top-nav">
+        <div class="close-menu" id="close-menu">×</div>
         <li class="nav-item">
-          <a href="uno.html" class="navlist">Uno</a>
+          <a href="uno.html" class="navlist">Line Up</a>
         </li>
         <li class="nav-item">
-          <a href="dos.html" class="navlist">Dos</a>
+          <a href="dos.html" class="navlist">Info</a>
         </li>
         <li class="nav-item">
-          <a href="tres.html" class="navlist">Tres</a>
+          <a href="tres.html" class="navlist">Sponsors</a>
         </li>
+
         <li class="nav-item">
-          <a href="cuatro.html" class="navlist">Cuatro</a>
-        </li>
-        <li class="nav-item">
-          <a href="especial.html" class="navlist-especial">Especial</a>
+          <a href="especial.html" class="navlist-especial">¡Comprar tickets!</a>
         </li>
       </ul>
     </nav>
@@ -97,20 +96,14 @@
           </div>
   
           <div class="social-icons">
-            <a href="https://web.whatsapp.com/">
-              <img src="icon-wa.png" alt="icon whatsapp" />
+            <a href="https://web.instagram.com/">
+              <object data="instagram.svg" type="image/svg+xml" alt="icon instagram"></object>
             </a>
-            <a href="https://www.facebook.com/">
-              <img src="icon-fb.png" alt="icon facebook" />
+            <a href="https://www.tiktok.com/">
+              <object data="tiktok.svg" type="image/svg+xml" alt="icon tiktok"></object>
             </a>
-            <a href="https://web.instagram.com/404">
-              <img src="icon-ig.png" alt="icon instagram" />
-            </a>
-            <a href="https://www.twitter.com/">
-              <img src="icon-tw.png" alt="icon twitter" />
-            </a>
-            <a href="https://www.youtube.com/">
-              <img src="icon-yt.png" alt="icon youtube" />
+            <a href="https://www.x.com/">
+              <object data="x.svg" type="image/svg+xml" alt="icon x"></object>
             </a>
           </div>
         </div>
