--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
     <title>Music Festival</title>
-    <link rel="shortcut icon" href="" />
+    <link rel="shortcut icon" href="logo title music festival.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@300;400;500;600;700;800&family=Outfit:wght@300;400;500;600;700;800;900&family=Chakra+Petch:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -22,17 +22,17 @@
       <ul class="top-nav">
         <div class="close-menu" id="close-menu">×</div>
         <li class="nav-item">
-          <a href="uno.html" class="navlist">Line Up</a>
+          <a href="uno.html" class="navlist modern-hover">LINE UP</a>
         </li>
         <li class="nav-item">
-          <a href="dos.html" class="navlist">Info</a>
+          <a href="dos.html" class="navlist modern-hover">INFO</a>
         </li>
         <li class="nav-item">
-          <a href="tres.html" class="navlist">Sponsors</a>
+          <a href="tres.html" class="navlist modern-hover">SPONSORS</a>
         </li>
 
         <li class="nav-item">
-          <a href="especial.html" class="navlist-especial">¡Comprar tickets!</a>
+          <a href="especial.html" class="navlist-especial modern-hover">¡COMPRAR TICKETS!</a>
         </li>
       </ul>
     </nav>
@@ -42,31 +42,15 @@
         <img src="1.png" alt="Logo" id="intro-logo" />
       </div>
   
-      <div class="gallery-container" id="gallery-container">
-        <div class="gallery-slide" id="gallery-slide">
-          <img src="gallery-img-1.png" alt="Imagen 1" class="large-screen" />
-          <img src="gallery-img-2.png" alt="Imagen 2" class="large-screen" />
-          <img src="gallery-img-3.png" alt="Imagen 3" class="large-screen" />
-          <img
-            src="gallery-img-1-vertical.png"
-            alt="Imagen 1"
-            class="small-screen"
-          />
-          <img
-            src="gallery-img-2-vertical.png"
-            alt="Imagen 2"
-            class="small-screen"
-          />
-          <img
-            src="gallery-img-3-vertical.png"
-            alt="Imagen 3"
-            class="small-screen"
-          />
+      <!-- Hero Section con tipografía moderna -->
+      <section class="hero-section">
+        <h1 class="modern-title aggressive-text">MUSIC FESTIVAL</h1>
+        <p class="modern-subtitle">EXPERIENCIA ELECTRÓNICA EXTREMA</p>
+        <div class="hero-cta">
+          <a href="especial.html" class="navlist-especial modern-hover">¡COMPRAR TICKETS!</a>
         </div>
-        <a class="prev" id="prev">&#10094;</a>
-        <a class="next" id="next">&#10095;</a>
-        <div class="indicator-container" id="indicator-container"></div>
-      </div>
+      </section>
+
 
 
 
@@ -87,36 +71,35 @@
     <footer>
         <div class="contenedor-footer">
           <div class="lista-footer">
-            <a href="" class="footer-link">item1</a>
-            <a href="" class="footer-link">item2</a>
-            <a href="" class="footer-link">item3</a>
-            <a href="" class="footer-link">item3</a>
-            <a href="" class="footer-link">item5</a>
-            <a href="" class="footer-link">item6</a>
+            <a href="" class="footer-link modern-hover">LINE UP</a>
+            <a href="" class="footer-link modern-hover">INFO</a>
+            <a href="" class="footer-link modern-hover">SPONSORS</a>
+            <a href="" class="footer-link modern-hover">TICKETS</a>
+            <a href="" class="footer-link modern-hover">CONTACTO</a>
+            <a href="" class="footer-link modern-hover">FAQ</a>
           </div>
   
           <div class="social-icons">
-            <a href="https://web.instagram.com/">
+            <a href="https://web.instagram.com/" class="modern-hover">
               <object data="instagram.svg" type="image/svg+xml" alt="icon instagram"></object>
             </a>
-            <a href="https://www.tiktok.com/">
+            <a href="https://www.tiktok.com/" class="modern-hover">
               <object data="tiktok.svg" type="image/svg+xml" alt="icon tiktok"></object>
             </a>
-            <a href="https://www.x.com/">
+            <a href="https://www.x.com/" class="modern-hover">
               <object data="x.svg" type="image/svg+xml" alt="icon x"></object>
             </a>
           </div>
         </div>
   
         <div class="derechos">
-          Todos los derechos reservados a GO! GYM S.A. ©1998-2025
+          TODOS LOS DERECHOS RESERVADOS A MUSIC FESTIVAL ©2024-2025
         </div>
         <div class="derechos">
-          Desarrollado por
-          <a href="x">agencia</a>
+          DESARROLLADO POR
+          <a href="https://baeco.tech" class="modern-hover">baeco.tech</a>
         </div>
       </footer>
   <script src="burger.js"></script>
   <script src="intro.js"></script>
-  <script src="gallery.js"></script>
 </html>
