--- a/sponsors.html
+++ b/sponsors.html
@@ -1,44 +1,147 @@
 <!DOCTYPE html>
 <html>
-<head>
-        <title>Music Festival - Sponsors</title>
-        <link rel="stylesheet" href="main.css" type="text/css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">        
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
-    <link rel="icon" href="logo title music festival.png">  
-</head>
-<body>
-        <nav>
-<ul class="menu">
-        <a href="festival.html"><img src="logo music festival clean.png"></a>
-        <a href="lineup.html"><li>Line Up</li></a>
-        <a href="Info.html"><li>Info</li></a>
-        <a href="sponsors.html"><li>Sponsors</li></a>
-    <ul class="tickets">
-    <a href="https://www.allaccess.com.ar"><li>Quiero mis tickets !</li></a>
-    </ul>
-        </nav>  
-        <div class="sponsors">
-            <div class="presenta">
-                <h1 class="adstop">Presenta</h1>
-                <a href="https://flow.com.ar/"><img src="Flow.png" class="presentaimg"></a>
-            </div>
-            <div class="medios de pago">
-                <h1 class="ads">Medios de pago</h1>
-                <a href="https://www.americanexpress.com/ar"><img src="american express.png" class="mediosimg"></a>
-                <a href="https://www.santander.com.ar"><img src="Santander.png" class="mediosimg"></a>
-            </div>
-            <div class="Auspician">
-                <h1 class="ads">Auspician</h1>
-                <a href="https://www.branca.com.ar"><img src="fernet.png" class="auspicianimg"></a>
-                <a href="https://www.drlemon.com.ar"><img src="dr lemon.jpg" class="auspicianimg"></a>
-                <a href="https://tienda.fila.com.ar"><img src="fila.png" class="auspicianimg"></a>
-                <a href="https://www.monsterenergy.com/es"><img src="monster.png" class="auspicianimg"></a>
-            </div>
+  <head>
+    <title>Music Festival - Sponsors</title>
+    <link rel="stylesheet" href="main.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@300;400;500;600;700;800&family=Outfit:wght@300;400;500;600;700;800;900&family=Chakra+Petch:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="logo title music festival.png" />
+  </head>
+  <body>
+    <nav class="navbar">
+      <a href="index.html">
+        <img
+          src="logo music festival clean.png"
+          class="logotipo"
+          alt="logotipo"
+        />
+      </a>
+      <div class="hamburger-menu" id="hamburger-menu">&#9776;</div>
+      <ul class="top-nav">
+        <div class="close-menu" id="close-menu">×</div>
+        <li class="nav-item">
+          <a href="lineup.html" class="navlist modern-hover">LINE UP</a>
+        </li>
+        <li class="nav-item">
+          <a href="Info.html" class="navlist modern-hover">INFO</a>
+        </li>
+        <li class="nav-item">
+          <a href="sponsors.html" class="navlist modern-hover">SPONSORS</a>
+        </li>
+
+        <li class="nav-item">
+          <a
+            href="https://www.allaccess.com.ar"
+            class="navlist-especial modern-hover"
+            >¡COMPRAR TICKETS!</a
+          >
+        </li>
+      </ul>
+    </nav>
+    <!-- Hero Section Sponsors -->
+    <section class="hero-section">
+      <h1 class="modern-title aggressive-text">SPONSORS</h1>
+      <p class="modern-subtitle">NUESTROS PARTNERS</p>
+    </section>
+
+    <!-- Sponsors Section -->
+    <section class="sponsors-section">
+      <div class="sponsors-container">
+        <div class="sponsor-category presenta">
+          <h2 class="sponsor-title">PRESENTA</h2>
+          <div class="sponsor-logos">
+            <a href="https://flow.com.ar/" class="sponsor-link">
+              <img
+                src="Flow.png"
+                alt="Flow"
+                class="sponsor-logo main-sponsor"
+              />
+            </a>
+          </div>
         </div>
-</body>
+
+        <div class="sponsor-category medios-pago">
+          <h2 class="sponsor-title">MEDIOS DE PAGO</h2>
+          <div class="sponsor-logos">
+            <a href="https://www.santander.com.ar" class="sponsor-link">
+              <img src="Santander.png" alt="Santander" class="sponsor-logo" />
+            </a>
+          </div>
+        </div>
+
+        <div class="sponsor-category">
+          <h2 class="sponsor-title">AUSPICIAN</h2>
+          <div class="sponsor-logos">
+            <a href="https://www.branca.com.ar" class="sponsor-link">
+              <img src="fernet.png" alt="Fernet Branca" class="sponsor-logo" />
+            </a>
+            <a href="https://www.drlemon.com.ar" class="sponsor-link">
+              <img src="dr lemon.jpg" alt="Dr Lemon" class="sponsor-logo" />
+            </a>
+            <a href="https://tienda.fila.com.ar" class="sponsor-link">
+              <img src="fila.png" alt="Fila" class="sponsor-logo" />
+            </a>
+            <a href="https://www.monsterenergy.com/es" class="sponsor-link">
+              <img
+                src="monster.png"
+                alt="Monster Energy"
+                class="sponsor-logo"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="contenedor-footer">
+        <div class="lista-footer">
+          <a href="lineup.html" class="footer-link modern-hover">LINE UP</a>
+          <a href="Info.html" class="footer-link modern-hover">INFO</a>
+          <a href="sponsors.html" class="footer-link modern-hover">SPONSORS</a>
+          <a
+            href="https://www.allaccess.com.ar"
+            class="footer-link modern-hover"
+            >TICKETS</a
+          >
+          <a href="#" class="footer-link modern-hover">CONTACTO</a>
+          <a href="#" class="footer-link modern-hover">FAQ</a>
+        </div>
+
+        <div class="social-icons">
+          <a href="https://web.instagram.com/" class="modern-hover">
+            <object
+              data="instagram.svg"
+              type="image/svg+xml"
+              alt="icon instagram"
+            ></object>
+          </a>
+          <a href="https://www.tiktok.com/" class="modern-hover">
+            <object
+              data="tiktok.svg"
+              type="image/svg+xml"
+              alt="icon tiktok"
+            ></object>
+          </a>
+          <a href="https://www.x.com/" class="modern-hover">
+            <object data="x.svg" type="image/svg+xml" alt="icon x"></object>
+          </a>
+        </div>
+      </div>
+
+      <div class="derechos">
+        TODOS LOS DERECHOS RESERVADOS A MUSIC FESTIVAL ©2024-2025
+      </div>
+      <div class="derechos">
+        DESARROLLADO POR
+        <a href="https://baeco.tech" class="modern-hover">baeco.tech</a>
+      </div>
+    </footer>
+
+    <script src="burger.js"></script>
+  </body>
 </html>
