--- a/index.html
+++ b/index.html
@@ -13,93 +13,97 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="index-page">
     <nav class="navbar">
       <a href="index.html">
-        <img src="logo music festival clean.png" class="logotipo" alt="logotipo" />
+        <img
+          src="logo music festival clean.png"
+          class="logotipo"
+          alt="logotipo"
+        />
       </a>
       <div class="hamburger-menu" id="hamburger-menu">&#9776;</div>
       <ul class="top-nav">
         <div class="close-menu" id="close-menu">×</div>
         <li class="nav-item">
-          <a href="uno.html" class="navlist modern-hover">LINE UP</a>
+          <a href="lineup.html" class="navlist modern-hover">LINE UP</a>
         </li>
         <li class="nav-item">
-          <a href="dos.html" class="navlist modern-hover">INFO</a>
+          <a href="Info.html" class="navlist modern-hover">INFO</a>
         </li>
         <li class="nav-item">
-          <a href="tres.html" class="navlist modern-hover">SPONSORS</a>
+          <a href="sponsors.html" class="navlist modern-hover">SPONSORS</a>
         </li>
 
         <li class="nav-item">
-          <a href="especial.html" class="navlist-especial modern-hover">¡COMPRAR TICKETS!</a>
+          <a
+            href="https://www.allaccess.com.ar"
+            class="navlist-especial modern-hover"
+            >¡COMPRAR TICKETS!</a
+          >
         </li>
       </ul>
     </nav>
 
-
     <div id="logo-intro">
-        <img src="1.png" alt="Logo" id="intro-logo" />
+      <img src="1.png" alt="Logo" id="intro-logo" />
+    </div>
+
+    <!-- Hero Section con tipografía moderna -->
+    <section class="hero-section">
+      <h1 class="modern-title aggressive-text">MUSIC FESTIVAL</h1>
+      <p class="modern-subtitle">EXPERIENCIA ELECTRÓNICA EXTREMA</p>
+      <div class="hero-cta">
+        <a
+          href="https://www.allaccess.com.ar"
+          class="navlist-especial modern-hover"
+          >¡COMPRAR TICKETS!</a
+        >
       </div>
-  
-      <!-- Hero Section con tipografía moderna -->
-      <section class="hero-section">
-        <h1 class="modern-title aggressive-text">MUSIC FESTIVAL</h1>
-        <p class="modern-subtitle">EXPERIENCIA ELECTRÓNICA EXTREMA</p>
-        <div class="hero-cta">
-          <a href="especial.html" class="navlist-especial modern-hover">¡COMPRAR TICKETS!</a>
-        </div>
-      </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </section>
 
     <footer>
-        <div class="contenedor-footer">
-          <div class="lista-footer">
-            <a href="" class="footer-link modern-hover">LINE UP</a>
-            <a href="" class="footer-link modern-hover">INFO</a>
-            <a href="" class="footer-link modern-hover">SPONSORS</a>
-            <a href="" class="footer-link modern-hover">TICKETS</a>
-            <a href="" class="footer-link modern-hover">CONTACTO</a>
-            <a href="" class="footer-link modern-hover">FAQ</a>
-          </div>
-  
-          <div class="social-icons">
-            <a href="https://web.instagram.com/" class="modern-hover">
-              <object data="instagram.svg" type="image/svg+xml" alt="icon instagram"></object>
-            </a>
-            <a href="https://www.tiktok.com/" class="modern-hover">
-              <object data="tiktok.svg" type="image/svg+xml" alt="icon tiktok"></object>
-            </a>
-            <a href="https://www.x.com/" class="modern-hover">
-              <object data="x.svg" type="image/svg+xml" alt="icon x"></object>
-            </a>
-          </div>
+      <div class="contenedor-footer">
+        <div class="lista-footer">
+          <a href="" class="footer-link modern-hover">LINE UP</a>
+          <a href="" class="footer-link modern-hover">INFO</a>
+          <a href="" class="footer-link modern-hover">SPONSORS</a>
+          <a href="" class="footer-link modern-hover">TICKETS</a>
+          <a href="" class="footer-link modern-hover">CONTACTO</a>
+          <a href="" class="footer-link modern-hover">FAQ</a>
         </div>
-  
-        <div class="derechos">
-          TODOS LOS DERECHOS RESERVADOS A MUSIC FESTIVAL ©2024-2025
+
+        <div class="social-icons">
+          <a href="https://web.instagram.com/" class="modern-hover">
+            <object
+              data="instagram.svg"
+              type="image/svg+xml"
+              alt="icon instagram"
+            ></object>
+          </a>
+          <a href="https://www.tiktok.com/" class="modern-hover">
+            <object
+              data="tiktok.svg"
+              type="image/svg+xml"
+              alt="icon tiktok"
+            ></object>
+          </a>
+          <a href="https://www.x.com/" class="modern-hover">
+            <object data="x.svg" type="image/svg+xml" alt="icon x"></object>
+          </a>
         </div>
-        <div class="derechos">
-          DESARROLLADO POR
-          <a href="https://baeco.tech" class="modern-hover">baeco.tech</a>
-        </div>
-      </footer>
-  <script src="burger.js"></script>
-  <script src="intro.js"></script>
+      </div>
+
+      <div class="derechos">
+        TODOS LOS DERECHOS RESERVADOS A MUSIC FESTIVAL ©2024-2025
+      </div>
+      <div class="derechos">
+        DESARROLLADO POR
+        <a href="https://baeco.tech" class="modern-hover">baeco.tech</a>
+      </div>
+    </footer>
+
+    <script src="burger.js"></script>
+    <script src="intro.js"></script>
+  </body>
 </html>
