--- a/sponsors.html
+++ b/sponsors.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Music Festival - Sponsors</title>
     <link rel="stylesheet" href="main.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -11,7 +13,7 @@
     />
     <link rel="icon" href="logo title music festival.png" />
   </head>
-  <body>
+  <body class="sponsors-page">
     <nav class="navbar">
       <a href="index.html">
         <img
