--- a/lineup.html
+++ b/lineup.html
@@ -58,7 +58,7 @@
     <footer>
       <div class="contenedor-footer">
         <div class="lista-footer">
-          <a href="lineup.html" class="footer-link modern-hover">LINE UP</a>
+          <a href="index.html" class="footer-link modern-hover">INICIO</a>
           <a href="Info.html" class="footer-link modern-hover">INFO</a>
           <a href="sponsors.html" class="footer-link modern-hover">SPONSORS</a>
           <a
@@ -66,8 +66,6 @@
             class="footer-link modern-hover"
             >TICKETS</a
           >
-          <a href="#" class="footer-link modern-hover">CONTACTO</a>
-          <a href="#" class="footer-link modern-hover">FAQ</a>
         </div>
 
         <div class="social-icons">
