--- a/sponsors.html
+++ b/sponsors.html
@@ -102,16 +102,14 @@
     <footer>
       <div class="contenedor-footer">
         <div class="lista-footer">
+          <a href="index.html" class="footer-link modern-hover">INICIO</a>
           <a href="lineup.html" class="footer-link modern-hover">LINE UP</a>
           <a href="Info.html" class="footer-link modern-hover">INFO</a>
-          <a href="sponsors.html" class="footer-link modern-hover">SPONSORS</a>
           <a
             href="https://www.allaccess.com.ar"
             class="footer-link modern-hover"
             >TICKETS</a
           >
-          <a href="#" class="footer-link modern-hover">CONTACTO</a>
-          <a href="#" class="footer-link modern-hover">FAQ</a>
         </div>
 
         <div class="social-icons">
