--- a/lineup.html
+++ b/lineup.html
@@ -52,6 +52,13 @@
     <section class="lineup-section">
       <div class="lineup-container">
         <img src="lineup-img.png" alt="Line Up" class="lineup-image" />
+
+        <!-- Botón para compartir el lineup -->
+        <div class="share-lineup-container">
+          <button class="share-lineup-btn modern-hover" id="share-lineup-btn">
+            COMPARTIR
+          </button>
+        </div>
       </div>
     </section>
 
@@ -99,5 +106,6 @@
     </footer>
 
     <script src="burger.js"></script>
+    <script src="share-lineup.js"></script>
   </body>
 </html>
