--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
 
       <div class="derechos">
-        TODOS LOS DERECHOS RESERVADOS A MUSIC FESTIVAL ©2024-2025
+        EVENTO FICTICIO REALIZADO CON FINES ILUSTRATIVOS
       </div>
       <div class="derechos">
         DESARROLLADO POR
