--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
     <footer>
       <div class="contenedor-footer">
         <div class="lista-footer">
-          <a href="" class="footer-link modern-hover">LINE UP</a>
-          <a href="" class="footer-link modern-hover">INFO</a>
-          <a href="" class="footer-link modern-hover">SPONSORS</a>
-          <a href="" class="footer-link modern-hover">TICKETS</a>
-          <a href="" class="footer-link modern-hover">CONTACTO</a>
-          <a href="" class="footer-link modern-hover">FAQ</a>
+          <a href="lineup.html" class="footer-link modern-hover">LINE UP</a>
+          <a href="Info.html" class="footer-link modern-hover">INFO</a>
+          <a href="sponsors.html" class="footer-link modern-hover">SPONSORS</a>
+          <a
+            href="https://www.allaccess.com.ar"
+            class="footer-link modern-hover"
+            >TICKETS</a
+          >
         </div>
 
         <div class="social-icons">
