--- a/index.html
+++ b/index.html
@@ -62,6 +62,35 @@
       </div>
     </section>
 
+    <!-- Playlist Section -->
+    <section class="playlist-section">
+      <div class="playlist-card">
+        <div class="playlist-header">
+          <object
+            data="spotify.svg"
+            type="image/svg+xml"
+            alt="Spotify"
+            class="playlist-spotify-icon"
+          ></object>
+          <h2 class="playlist-title aggressive-text">NUESTRA PLAYLIST</h2>
+        </div>
+        <p class="playlist-subtitle">SENTÍ EL FESTIVAL ANTES DE LLEGAR</p>
+
+        <!-- Reemplaza el href con el enlace real de tu playlist -->
+        <a
+          href="https://open.spotify.com/playlist/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="playlist-cta modern-hover"
+        >
+          ESCUCHAR EN SPOTIFY
+        </a>
+
+        <!-- Si tenés el ID de playlist, podemos embeber el reproductor -->
+        <!-- <iframe class="spotify-embed" src="https://open.spotify.com/embed/playlist/TU_PLAYLIST_ID?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> -->
+      </div>
+    </section>
+
     <footer>
       <div class="contenedor-footer">
         <div class="lista-footer">
